--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
 
     "angular-in-memory-web-api": "~0.1.1",
     "bootstrap": "^3.3.7",
+    "fs-plus": "2.9.2",
     "systemjs": "0.19.39",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
